# retail-data-model

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  CONTRIBUTING.md  NOTICE  README.md  WORKSPACE  WORKSPACE_OLD  gRDM.code-workspace  gRDM.sublime-project  gRDM.sublime-workspace  go.mod
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE0Mjk3ODk1ODY=  npm_translate_lock_LTIxNDYyOTE3NTI=
.github/workflows/: main.yml
api/: BUILD.bazel  README.md
api/common/: BUILD.bazel  model.proto  service.proto
api/customer/: BUILD.bazel  model.proto
api/enterprise/: BUILD.bazel  model.proto  service.proto
api/enums/: BUILD.bazel  climate.proto  communication.proto  country.proto  currency.proto  geo.proto  lang.proto  locale.proto  party.proto  payment.proto  time_zone.proto  uom.proto
api/events/: BUILD.bazel  events.schema  model.proto  service.proto
api/inventory/: BUILD.bazel  inventory_control.proto  inventory_control_service.proto  inventory_fact.proto  inventory_fact_service.proto  model.proto
api/location/: BUILD.bazel  model.data  model.proto  service.proto
api/merchandise/: BUILD.bazel  category.proto  model.proto  service.proto
api/party/: BUILD.bazel  model.proto
api/payments/: BUILD.bazel
api/promotions/: BUILD.bazel  model.proto
common/grpc/: service.pb.go
common/pb/: model.pb.go
customer/pb/: model.pb.go
docs/: BUILD  configRelearn.toml
docs/assets/scss/: variables.scss
docs/config/_default/: config.yaml  params.yaml
docs/content/en/: _index.md
docs/content/en/contributing/: _index.md  code_of_conduct.md  contributors.md
docs/content/en/toolchain/: _index.md  tools.md  workstation.md
docs/content/en/toolchain/ides/: _index.md
docs/content/en/use/: _index.md
docs/content/en/use/go/: _index.md
docs/content/en/use/python/: _index.md
docs/data/menu/: extra.yaml  more.yaml
docs/static/: custom.css
enterprise/pb/: model.pb.go
enums/: climate.pb.go  communication.pb.go  country.pb.go  currency.pb.go  geo.pb.go  lang.pb.go  locale.pb.go  party.pb.go  payment.pb.go  time_zone.pb.go  uom.pb.go
events/grpc/: service.pb.go
events/pb/: model.pb.go
examples/: README.md
examples/configs/: BUILD.bazel  config-schema.json  events-test-config.json  retail-test-config.json
examples/data/: BUILD.bazel
examples/go/: README.md  go.mod  go.sum
examples/go/common/pkg/client/: BUILD.bazel  audit_client.go  country_client.go  util.go
examples/go/common/pkg/model/: BUILD.bazel  latch.go  latch_test.go  (+1 more)
examples/go/events/pkg/: README.md
examples/go/events/pkg/model/: BUILD.bazel  errors.go  event.go  event_description.go  event_record.go
examples/go/events/test/client/: BUILD.bazel  model_test.go
examples/go/location/test/model/: BUILD.bazel  example.json  location_test.go  site_test.go
examples/go/merchandise/pkg/model/: BUILD.bazel  common.go  product.go  product_template.go  supplier.go
examples/java/: README.md
examples/python/: README.md
examples/python/src/: BUILD.bazel
examples/python/src/google_retail_common_client/: README.md  country_client.py
examples/python/src/google_retail_common_service/: country_service.py
examples/python/tests/: BUILD.bazel  enum_test.py  grpc_test.py  model_test.py
location/grpc/: service.pb.go
location/pb/: model.pb.go
merchandise/pb/: category.pb.go  model.pb.go
modules/common/api/: BUILD.bazel  enum_climate.proto  enum_communication.proto  enum_country.proto  enum_currency.proto  enum_geography.proto  enum_language.proto  enum_locale.proto  enum_party.proto  enum_payment.proto  enum_time_zone.proto  enum_unit_of_measure.proto  model_common.proto  model_enterprise.proto  model_party.proto  service_common.proto  service_enterprise.proto
modules/common/go/: BUILD.bazel  go.mod
modules/common/go/pkg/client/: BUILD.bazel  audit_client.go  country_client.go  util.go
modules/common/go/pkg/model/: BUILD.bazel  latch.go  latch_test.go  status_response.go
modules/common/go/pkg/service/: BUILD.bazel  country_server.go
modules/common/scripts/: BUILD.bazel
modules/common/scripts/terraform/: main.tf  variables.tf
modules/common/terraform/gcp/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
modules/customer/api/: BUILD.bazel  model.proto
modules/events/: BUILD.bazel
modules/events/api/: BUILD.bazel  model.proto  service.proto
modules/events/clients/go/: constants.go  event_client.go  model.go  utils.go
modules/location/api/: model.proto
modules/merchandise/api/: BUILD.bazel  model.proto
modules/promotions/api/: model.proto
party/pb/: model.pb.go
promotions/pb/: model.pb.go
sdk/: README.md
sdk/go/: BUILD.bazel  README.md  go.mod
sdk/java/: BUILD.bazel
sdk/js/: .bazelignore  .npmrc  BUILD.bazel  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
sdk/js/api/: BUILD.bazel  package.json
sdk/js/api/common/: BUILD.bazel  package.json  tsconfig.json
sdk/js/api/customer/: BUILD.bazel  package.json  tsconfig.json
sdk/js/api/enterprise/: BUILD.bazel  package.json  tsconfig.json
sdk/js/api/enums/: BUILD.bazel  package.json  tsconfig.json
sdk/js/api/events/: BUILD.bazel  package.json  tsconfig.json
sdk/js/api/inventory/: BUILD.bazel  package.json  tsconfig.json
sdk/js/api/location/: BUILD.bazel  package.json
sdk/js/api/merchandise/: BUILD.bazel  package.json  tsconfig.json
sdk/js/api/party/: BUILD.bazel  package.json
sdk/js/api/promotions/: BUILD.bazel  package.json
sdk/js/google/api/: BUILD.bazel  package.json
sdk/js/google/protobuf/: BUILD.bazel  package.json
sdk/python/: BUILD.bazel
tools/: .bazelproject  add_uuid_to_csv.py  gopackagesdriver.sh
tools/protoc-gen-bq-terraform/: BUILD.bazel  protoc-gen-bq-terraform-rule.bzl
tools/protoc-gen-bq-terraform/cmd/: BUILD.bazel  bq_terraform_generator.go  protoc-gen-bq-terraform.go
web/rdm-console/: package-lock.json  package.json
web/rdm-console/src/: App.tsx  Home.tsx  Model.tsx  ModuleCard.tsx  ModuleData.tsx  ModuleDetail.tsx  ModuleDownload.tsx  TopNav.tsx  main.tsx
(+88 files in other folders)
