# gazelle:ignore

# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@protoc_gen_bq_schema//:defs.bzl", "bq_schema_compile")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_markdown_compile")
load("//:build/go_deps.bzl", "COMMON_API_PROTOS", "BQ_PROTOS")

package(default_visibility = [
    "//visibility:public"
])

proto_library(
    name = "model_proto",
    srcs = [
        "model.proto",
    ],
    deps = [
        "//api/common:model_proto",
        "//api/enums",
        "//api/party:model_proto",
    ] + COMMON_API_PROTOS + BQ_PROTOS,
)

proto_library(
    name = "service_proto",
    srcs = [
        "service.proto",
    ],
    deps = [
        "//api/common:model_proto",
        "//api/enums",
        "//api/party:model_proto",
        ":model_proto",
    ] + COMMON_API_PROTOS,
)

bq_schema_compile(
    name = "schemas",
    protos = [
        ":model_proto",
    ],
)

doc_markdown_compile(
    name = "doc_enterprise_model",
    protos = [":model_proto"],
)

doc_markdown_compile(
    name = "doc_enterprise_service",
    output_mode = "NO_PREFIX",
    prefix_path = "docs/enterprise",
    protos = [
        ":service_proto",
    ],
)
