load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_markdown_compile")

package(default_visibility = [
    "//api:__subpackages__",
    "//examples:__subpackages__",
    "//sdk:__subpackages__",
])

proto_library(
    name = "enums",
    srcs = [
        "climate.proto",
        "communication.proto",
        "country.proto",
        "currency.proto",
        "geo.proto",
        "lang.proto",
        "locale.proto",
        "party.proto",
        "payment.proto",
        "time_zone.proto",
        "uom.proto",
    ],
    visibility = ["//visibility:public"],
)

doc_markdown_compile(
    name = "doc_enums",
    protos = [":enums"],
)
