load("@rules_proto_grpc//js:defs.bzl", "js_grpc_web_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

BUILD_DEPS = [":node_modules/" + d for d in [
    "@grpc/grpc-js",
    "google-protobuf",
    "grpc-tools",
    "grpc-web",
    "ts-protoc-gen",
]]

filegroup(
    name = "workspace_files",
    srcs = [
        "//sdk/js/api",
        #        "//sdk/js/google/api",
        #        "//sdk/js/google/protobuf",
    ],
)

npm_package(
    name = "js",
    srcs = [
        ":LICENSE",
        ":README.md",
        ":package.json",
        ":tsconfig.json",
        ":workspace_files",
    ],
    out = "gcp-rdm",
    replace_prefixes = {
        "api/api": "api",
        "google/api/api": "google/api",
        "google/protobuf/protobuf": "google/protobuf",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
