# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")

package(default_visibility = [
    "//visibility:public",
])

ENUMS = [
    "//api/enums",
]

PROTOS = [
    "@protoc_gen_bq_schema//api:bq_schema_proto_lib",
    "//api/common:model_proto",
    "//api/customer:model_proto",
    "//api/enterprise:model_proto",
    "//api/events:model_proto",
    "//api/inventory:model_proto",
    "//api/location:model_proto",
    "//api/merchandise:model_proto",
    "//api/party:model_proto",
    "//api/promotions:model_proto",
]

GRPCS = [
    "//api/common:service_proto",
    "//api/events:service_proto",
    "//api/inventory:service_proto",
    "//api/location:service_proto",
]

python_proto_library(
    name = "python_proto_library",
    protos = ENUMS + PROTOS,
)

python_grpc_library(
    name = "python_grpc_library",
    protos = ENUMS + PROTOS + GRPCS,
)
#
## Create a tgz package
#pkg_tar(
#    name = "rdm_python_lib_tar",
#    srcs = [":python_grpc_library"],
#    package_file_name = "rdm_python_lib.tgz",
#)
#
## Create a zip package
#pkg_zip(
#    name = "rdm_python_lib_zip",
#    srcs = [":python_grpc_library"],
#    package_file_name = "rdm_python_lib.zip",
#)
