load("@rules_proto_grpc_py3_deps//:requirements.bzl", "requirement")
load("@rules_proto_grpc//python:python_proto_library.bzl", PY_PROTO_DEPS = "PROTO_DEPS")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = [
    "//examples/python:__subpackages__",
])

#py_library(
#    name = "py_country_client",
#    srcs = glob([
#        "google_retail_common_client/*.py",
#    ]),
#    imports = ["google_retail_common_client"],
#    deps = [
#        requirement("google-api-python-client"),
#        requirement("grpcio"),
#        requirement("protobuf"),
#        requirement("google-api-core"),
#        "//sdk/python:python_grpc_library",
#    ] + PY_PROTO_DEPS,
#)
#
#py_library(
#    name = "py_country_service",
#    srcs = glob([
#        "google_retail_common_service/*.py",
#    ]),
#    imports = ["google_retail_common_service"],
#    deps = [
#        requirement("google-api-python-client"),
#        requirement("grpcio"),
#        requirement("protobuf"),
#        requirement("google-api-core"),
#        "//sdk/python:python_grpc_library",
#    ] + PY_PROTO_DEPS,
#)
