# gazelle:ignore

# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = [
    "//modules/common:__subpackages__",
])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_markdown_compile")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:build/go_deps.bzl", "COMMON_API_PROTOS")
load("@protoc_gen_bq_schema//:defs.bzl", "bq_schema_compile")
load("//tools/protoc-gen-bq-terraform:protoc-gen-bq-terraform-rule.bzl", "gen_terraform")

proto_library(
    name = "enums",
    srcs = [
        "enum_climate.proto",
        "enum_communication.proto",
        "enum_country.proto",
        "enum_currency.proto",
        "enum_geography.proto",
        "enum_language.proto",
        "enum_locale.proto",
        "enum_party.proto",
        "enum_payment.proto",
        "enum_time_zone.proto",
        "enum_unit_of_measure.proto",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "model_proto",
    srcs = [
        "model_common.proto",
        "model_enterprise.proto",
        "model_party.proto",
    ],
    deps = [
        ":enums",
        "@protoc_gen_bq_schema//api:bq_schema_proto_lib",
    ] + COMMON_API_PROTOS,
)

proto_library(
    name = "service_proto",
    srcs = [
        "service_common.proto",
        "service_enterprise.proto",
    ],
    deps = [
        ":enums",
        ":model_proto",
    ] + COMMON_API_PROTOS,
)

doc_markdown_compile(
    name = "doc_enums",
    output_mode = "NO_PREFIX",
    prefix_path = "docs/enums",
    protos = [":enums"],
)

bq_schema_compile(
    name = "schemas",
    protos = [
        ":model_proto",
    ],
)

filegroup(
    name = "schema_files",
    srcs = [
        ":schemas",
    ],
)

gen_terraform(
    name = "protoc-gen-bq-terraform",
    srcs = [":schema_files"],
    access_owner = "rmcguinness@google.com",
    access_reader_domain = "google.com",
    cmd = "//tools/protoc-gen-bq-terraform/cmd",
    dataset_id = "ds_common",
    debug = True,
    time_partition_type = "DAY",
)

doc_markdown_compile(
    name = "doc_common_model",
    output_mode = "NO_PREFIX",
    prefix_path = "docs/common",
    protos = [
        ":model_proto",
    ],
)

doc_markdown_compile(
    name = "doc_common_service",
    output_mode = "NO_PREFIX",
    prefix_path = "docs/common",
    protos = [
        ":service_proto",
    ],
)

filegroup(
    name = "api_documents",
    srcs = [
        ":doc_common_model",
        ":doc_common_service",
        ":doc_enums",
    ],
)

pkg_tar(
    name = "api_documents_tar",
    srcs = [":api_documents"],
    extension = ".tgz",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "schema_files_tar",
    srcs = [":schema_files"],
    extension = ".tgz",
    strip_prefix = "schemas",
    visibility = ["//visibility:public"],
)
