# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# gazelle:ignore
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:build/go_deps.bzl", "COMMON_API_PROTOS", "WELL_KNOWN_TYPES")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library", "go_proto_library")

go_proto_library(
    name = "bq_protogen_go_proto",
    importpath = "github.com/GoogleCloudPlatform/protoc-gen-bq-schema/protos",
    proto = "@protoc_gen_bq_schema//api:bq_schema_proto_lib",
    visibility = ["//modules/common:__subpackages__"],
)

# Enums
go_proto_library(
    name = "enums_go_proto",
    importpath = "cloud.google.com/rdm/common/enums",
    proto = "//modules/common/api:enums",
    visibility = ["//modules/common:__subpackages__"],
)

# Model
go_proto_library(
    name = "model_go_proto",
    importpath = "cloud.google.com/rdm/common/pb",
    proto = "//modules/common/api:model_proto",
    visibility = ["//modules/common:__subpackages__"],
    deps = [
        ":enums_go_proto",
        ":bq_protogen_go_proto",
    ] + WELL_KNOWN_TYPES,
)

go_grpc_library(
    name = "common_go_grpc",
    importpath = "cloud.google.com/rdm/common/grpc",
    protos = [
        "//modules/common/api:service_proto",
    ],
    visibility = ["//modules/common:__subpackages__"],
    deps = [
        ":enums_go_proto",
        ":model_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)
