# gazelle:ignore

# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = [
    "//modules:__subpackages__",
    "//sdk:__subpackages__",
])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_markdown_compile")
load("//:build/go_deps.bzl", "COMMON_API_PROTOS")

proto_library(
    name = "model_proto",
    srcs = ["model.proto"],
    deps = COMMON_API_PROTOS,
)

proto_library(
    name = "service_proto",
    srcs = [
        "service.proto",
    ],
    deps = [
        ":model_proto",
        "//api/common:model_proto",
    ] + COMMON_API_PROTOS,
)

doc_markdown_compile(
    name = "doc_events_model",
    protos = [
        ":model_proto",
    ],
)

doc_markdown_compile(
    name = "doc_events_service",
    protos = [
        ":service_proto",
    ],
)
