load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

PROTO_FILES = [
    "@protoc_gen_bq_schema//api:bq_schema_proto_lib",
]

js_grpc_node_compile(
    name = "api_protos",
    protos = PROTO_FILES,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workspace_files",
    srcs = [
        "//sdk/js/api/common",
        "//sdk/js/api/customer",
        "//sdk/js/api/enterprise",
        "//sdk/js/api/enums",
        "//sdk/js/api/events",
        "//sdk/js/api/inventory",
        "//sdk/js/api/location",
        "//sdk/js/api/merchandise",
        "//sdk/js/api/party",
        "//sdk/js/api/promotions",
    ],
)

npm_package(
    name = "api",
    srcs = [
        ":api_protos",
        ":package.json",
        ":tsconfig.json",
        ":workspace_files",
    ],
    out = "api",
    replace_prefixes = {
        "api_protos/api": "",
        "common/common": "common",
        "customer/customer": "customer",
        "enterprise/enterprise": "enterprise",
        "enums/enums": "enums",
        "events/events": "events",
        "inventory/inventory": "inventory",
        "location/location": "location",
        "merchandise/merchandise": "merchandise",
        "party/party": "party",
        "promotions/promotions": "promotions",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
