load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

PROTO_FILES = [
    "//api/customer:model_proto",
]

js_grpc_node_compile(
    name = "customer_protos",
    protos = PROTO_FILES,
    visibility = ["//visibility:public"],
)

npm_package(
    name = "customer",
    srcs = [
        ":customer_protos",
        ":package.json",
        ":tsconfig.json",
    ],
    replace_prefixes = {
        "customer_protos/api/customer": "",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
