load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

PROTO_FILES = [
    "//api/enums",
]

js_grpc_node_compile(
    name = "enum_protos",
    protos = PROTO_FILES,
    visibility = ["//visibility:public"],
)

npm_package(
    name = "enums",
    srcs = [
        ":enum_protos",
        ":package.json",
    ],
    replace_prefixes = {
        "enum_protos/api/enums": "",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
